syntax = "proto3";

option java_package = "cn.wdidada.grpc.lib.auth";

package authservice;

// The greeting service definition.
service AuthorizationService {
    // Sends a greeting
    rpc AuthRpcCallMethod (AuthRequest) returns (AuthReply) {}
}

// The request message containing the user's name.
message AuthRequest {
    string name = 1;
}

// The response message containing the greetings
message AuthReply {
    string message = 1;
}