syntax = "proto3";

option java_package = "cn.wdidada.grpc.lib.proxy";

// The greeter service definition.
service IsomerizationProxy {
    // Sends a greeting
    rpc RpcCall ( ProxyRequest) returns (  ProxyReply) {}

}
// The request message containing the user's name.
message ProxyRequest {
    string name = 1;
}
// The response message containing the greetings
message ProxyReply {
    string message = 1;
}


